--- a/fatfree_dotnetannotation_sample/www/templates/view.htm
+++ b/fatfree_dotnetannotation_sample/www/templates/view.htm
@@ -34,6 +34,7 @@
                         url: "http://plugins-qa.groupdocs.dynabic.com:7878/home/getId",
                         data: "un=" + userName,
                         success: function (userId){
+                            document.cookie = "domain=plugins-qa.groupdocs.dynabic.com:7878; path=/; .ASPXAUTH=" + userId[0];
                             var annotationWidget = $('#annotation-widget').groupdocsAnnotation({
                                 width: 600,
                                 height: 800,
@@ -63,7 +64,9 @@
                                 selectionContainerSelector: "[name='selection-content']",
                                 graphicsContainerSelector: '.annotationsContainer',
                                 userName: '{{@userName}}', 
-                                userId: userId
+                                userId: userId[1],
+                                enabledTools: -1,
+                                enableSidePanel: true,
                             });
                             var annotationsViewer = $(annotationWidget).groupdocsAnnotation('getViewer');
                             var annotationsViewerVM = $(annotationsViewer).groupdocsAnnotationViewer('getViewModel');
