--- a/fatfree_dotnetannotation_sample/www/templates/view.htm
+++ b/fatfree_dotnetannotation_sample/www/templates/view.htm
@@ -209,7 +209,7 @@
             <check if="{{ @url =='' }}">
                 <true>
                     <div id="requestForm" style="padding:20px; border:1px solid black;">
-                    <p> Enter data for request and press "Make request" button </p>
+                    <p> Enter data for request and press "Integrate" button </p>
                     <form action="view" method = "post" >
                         <label for='url'>URL of installed GroupDocs .NET Annotation</label>
                         <br />
